# melange-react-dnd

./: .gitignore  CHANGELOG.md  Makefile  README.md  bsconfig.json  dune-project  melange-react-dnd.opam  melange-react-dnd.opam.template  package-lock.json  package.json  webpack.config.js
.github/workflows/: build.yml
examples/: README.md  bsconfig.json  package-lock.json  package.json
examples/sortable/: Card.re  Container.re  T.re  dune  index.html  index.re
examples/src/: App.re  Basket.re  Card.re  Const.re  Container.re  DragBox.re  DropArea.re  Item.re  Records.re  T.re  index.css  index.html  index.re
public/: index.html
src/: BsReactDnd.re  BsReactDnd__Backend.re  BsReactDnd__DragDropContext.re  BsReactDnd__DragDropContextProvider.re  BsReactDnd__DragSource.re  BsReactDnd__DropTarget.re  BsReactDnd__Utils.re  Core.re  DnDBackend.re  DragDropContext.re  DragDropContextProvider.re  DragSource.re  DropTarget.re  ReactDND.re  ReactDnd.re  dune  index.css
src/ReactDND/: DragSource.re  ReactDND.re
