opam-version: "2.0"
synopsis: "Melange bindings for react-dnd"
description: "Melange bindings for react-dnd JavaScript library."
maintainer: [
  "Liubomyr Mykhalchenko <liubomyr.mykhalchenko@ahrefs.com>"
]
authors: [
  "Liubomyr Mykhalchenko <liubomyr.mykhalchenko@ahrefs.com>"
]
license: "MIT"
tags: ["melange" "react-js" "org:ahrefs"]
homepage: "https://github.com/ahrefs/melange-react-dnd/"
doc: "https://github.com/ahrefs/melange-react-dnd/"
bug-reports: "https://github.com/ahrefs/melange-react-dnd/issues"
depends: [
  "dune" {>= "3.8"}
  "ocaml"
  "melange" {>= "2.0.0"}
  "reason" {>= "3.10.0"}
  "reason-react"
  "reason-react-ppx"
  "melange-webapi" {with-test} # used to build the examples
  "ocaml-lsp-server" {with-test} # todo: use with-dev-setup once opam 2.2 is out
  "opam-check-npm-deps" {with-test} # todo: use with-dev-setup once opam 2.2 is out
  "odoc" {with-doc}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/ahrefs/melange-react-dnd.git"
depexts: [
  ["react-dnd"] {npm-version = "^14.0.3"}
  ["react-dnd-html5-backend"] {npm-version = "^14.0.1"}
]
pin-depends: [
  [ "melange.2.0.0"         "git+https://github.com/melange-re/melange.git#e114ad55d185badeb32b3c766c9ab547495eac1b" ]
  [ "reason.3.10.0"         "git+https://github.com/reasonml/reason.git#972261dab3b651ff8ab9b8b9fcc32940595073dc" ]
  [ "reason-react.dev"      "git+https://github.com/reasonml/reason-react.git#2e99c8ee87cefe241b698c191c74226da54cf9db" ]
  [ "reason-react-ppx.dev"  "git+https://github.com/reasonml/reason-react.git#2e99c8ee87cefe241b698c191c74226da54cf9db" ]
  [ "melange-webapi.dev"    "git+https://github.com/melange-community/melange-webapi.git#96dc1e2a867624d18050fad25cf1c71af7a098e1" ]
  [ "melange-fetch.dev"     "git+https://github.com/melange-community/melange-fetch.git#796f941b6b85eb7e6182ac6e4f40708bfde7a9a9" ]
]
